# csplit

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  conanfile.txt  notes.md
src/: CMakeLists.txt  csplit.m.cpp
src/core/: CMakeLists.txt  adhocsplitter.cpp  adhocsplitter.h  logging.h  speedrun.cpp  speedrun.h  split.cpp  split.h  splitter.cpp  splitter.h  steadytimer.cpp  steadytimer.h  timeattacksplitter.cpp  timeattacksplitter.h  timer.cpp  timer.h  timerutils.cpp  timerutils.h
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  adhocsplitter.t.cpp  csplitcore.t.cpp  fakeclock.cpp  fakeclock.h  mocksplitter.t.h  mocktimer.t.h  speedrun.t.cpp  split.t.cpp  steadytimer.t.cpp  timeattacksplitter.t.cpp
